добавлена стрелка для кнопки + проверены стили согласно корректному макету

--- a/src/sass/components/_modal-menu.scss
+++ b/src/sass/components/_modal-menu.scss
@@ -3,7 +3,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  left: calc(100% - 254px);
+  left: calc(100% - 250px);
   
   background-color: $color-background-menu;
   opacity: 1;
@@ -27,7 +27,7 @@
   left: 0;
   display: flex;
   flex-direction: column;
-  width: 254px;
+  width: 250px;
   height: 100%;
   padding-top: 60px;
   background-color: inherit;
@@ -49,6 +49,10 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 19px;
+
+  &:after {
+    margin-left: 15px;
+  }
 }
 
 .menu-item {
@@ -67,6 +71,7 @@
   display: inline-block;
   width: 100%;
   padding-top: 11px;
+  padding-right: 21px;
   padding-bottom: 12px;
   padding-left: 21px;  
   color: $color-main;
