--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -22,17 +22,6 @@
     padding-top: 37px;
     padding-bottom: 0;
   }
-
-  @media screen and (min-width: $desktop){
-    align-items: flex-end;
-    padding-top: 25px;
-  }
-}
-
-.logo {
-  @media screen and (min-width: $desktop){
-    padding-bottom: 7px;
-  }
 }
 
 .nav-buttons {
@@ -41,6 +30,7 @@
 }
 
 .btn-menu-open {
+  padding: 0;
   border: none;
   background-color: transparent;
 
@@ -50,9 +40,10 @@
 }
 
 .btn-purchase {
-  width: 160px;
+  width: 159px;
   min-height: 44px;
   margin-left: 30px;
+  padding: 0;
   color: $color-accent;
   font-family: 'DM Sans', sans-serif;
   font-size: 16px;
@@ -62,6 +53,17 @@
   border-width: 0;
   border-radius: 22px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:after {
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 9px;
+    margin-left: 12px;
+    background-image: url(./../images/bitmap/common/btn-arrow.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
 
   &:focus,
   &:hover {
@@ -87,18 +89,18 @@
 
 .nav-item {
   @media screen and (min-width: $desktop){
-    padding-right: 35px;
+    margin-right: 35px;
 
     &:last-child {
-      padding-right: 0;
+      margin-right: 0;
     }
   }
 }
 
 .nav-link {
   display: inline-block;
-  padding-top: 17px;
-  padding-bottom: 17px;
+  padding-top: 11px;
+  padding-bottom: 11px;
   color: $color-main;
   font-family: 'DM Sans', sans-serif;
   font-size: 16px;
@@ -113,11 +115,6 @@
   
   &.active {
     color: $color-accent;
-  }
-
-  @media screen and (min-width: $desktop){
-    padding-top: 11px;
-    padding-bottom: 11px;
   }
 }
 
