--- a/src/sass/layouts/_section-made.scss
+++ b/src/sass/layouts/_section-made.scss
@@ -4,6 +4,11 @@
   font-family: $main-font;
   background-color: $background-made-footer-locations;
 
+  @media screen and (min-width: 769px) and (max-width: 1199px) {
+    padding-top: 130px;
+    padding-bottom: 33px;
+  }
+
   @include for-size(mobile-only) {
     background-image: url(./../images/made/made-bg-320.png);
     background-size: contain;
@@ -33,6 +38,24 @@
   }
 }
 
+.made-flex {
+  @include for-size(tablet) {
+    display: flex;
+    margin-left: -17px;
+    padding-left: 21px;
+    padding-right: 24px;
+    // justify-content: center;
+    // align-items: baseline;
+  }
+}
+
+.made-item {
+  @include for-size(tablet) {
+    margin-left: 17px;
+    flex-basis: calc(100% / 2 - 17px);
+  }
+}
+
 .made-second-title,
 .made-title {
   text-align: center;
@@ -40,6 +63,10 @@
   @include fonts(18px, 400, 1.145);
   text-transform: uppercase;
   color: $primary-accent-color;
+
+  @include for-size(tablet) {
+    font-size: 26px;
+  }
 }
 
 .made-second-title {
@@ -50,6 +77,11 @@
   margin-bottom: 26px;
   font-size: 34px;
   color: $accent-color;
+
+  @include for-size(tablet) {
+    margin-bottom: 50px;
+    font-size: 48px;
+  }
 }
 
 .made-photo {
@@ -59,18 +91,31 @@
 }
 
 .made-container {
-  padding-right: 35px;
-  padding-left: 35px;
+  @include for-size(mobile) {
+    padding-right: 35px;
+    padding-left: 35px;
+  }
+
+  @include for-size(tablet) {
+    padding-top: 50px;
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 .made-main-text,
 .made-text {
   @include fonts(12px, 400, 1.62);
+
+  @include for-size(tablet) {
+    @include fonts(14px, 400, 1.76);
+  }
 }
 
 .made-main-text {
   margin-bottom: 30px;
 }
+
 .made-text {
   color: $secondary-text-color;
   margin-bottom: 15px;
@@ -84,7 +129,8 @@
 
   min-width: 176px;
   padding: 10px 37px;
-  // margin-bottom: 32px;
+
+  text-decoration: none;
 
   @include fonts(14px, 700, 1.302);
 
@@ -100,14 +146,21 @@
   &:focus {
     background: #ecebeb;
   }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-top: 62px;
+  }
+
+  @include for-size(tablet) {
+    font-size: 16px;
+  }
 }
 
 .icon-made-arrow {
   position: absolute;
 
-  top: 50%;
-  right: 25px;
-  transform: translateY(-50%);
+  top: 52%;
+  right: 28px;
+  transform: translateY(-50%) scale(1.3);
   fill: $accent-color;
   // transition: fill 250ms $bezier-page;
 
