Add sizes for image

--- a/src/partials/section-made.html
+++ b/src/partials/section-made.html
@@ -49,6 +49,14 @@
           />
 
           <img
+            srcset="
+              ./images/made/made-516.png  516w,
+              ./images/made/made-1032.png 516w,
+              ./images/made/made-340.png  340w,
+              ./images/made/made-680.png  340w,
+              ./images/made/made-280.png  280w,
+              ./images/made/made-560.png  280w
+            "
             class="made-photo"
             src="./images/made/made-516.png"
             alt="Nice cow with fresh milk bottle"
