секция Cow добавлены картинки в jpg

--- a/src/partials/cow.html
+++ b/src/partials/cow.html
@@ -40,15 +40,15 @@
             </li>
         </ul>    
     </div>
-    <div class="collage">
+    <div class="container">
         <picture>
-            <source srcset="./images/desktop/cow/collage.png 1x, ./images/desktop/cow/collage@2x.png 2x"
+            <source srcset="./images/desktop/co/collage.jpg 1x, ./images/desktop/co/collage@2x.jpg 2x"
                 media="(min-width: 1050px)">
-            <source srcset="./images/tablet/cow/collage.png 1x, ./images/tablet/cow/collage@2x.png 2x" 
+            <source srcset="./images/tablet/co/collage.jpg 1x, ./images/tablet/co/collage@2x.jpg 2x" 
                 media="(min-width: 768px)">
-            <source srcset="./images/mobile/cow/collage.png 1x, ./images/mobile/cow/collage@2x.png 2x"
-                media="(max-width: 767px)">  
-            <img src="./images/desktop/cow/collage.png" alt="Collage" width="1280px">
+            <source srcset="./images/mobile/co/collage@2x.jpg 2x"
+                media="(min-width: 320px)">  
+            <img class="collage" src="./images/mobile/co/collage.jpg" alt="Collage" width="320">
         </picture>
     </div>
 </section>
