--- a/src/sass/layouts/_cow.scss
+++ b/src/sass/layouts/_cow.scss
@@ -283,20 +283,38 @@
   }
 }
 
-.collage {
-  position: absolute;
-  bottom: -80px;
-  left: 50%;
-  transform: translate(-50%);
-  width: 320px;
+// .collage {
+//   position: absolute;
+//   bottom: -80px;
+//   left: 50%;
+//   transform: translate(-50%);
+//   width: 320px;
 
-  @include for-size(tablet) {
-    bottom: -157px;
-    width: 768px;
+//   @include for-size(tablet) {
+//     bottom: -157px;
+//     width: 768px;
+//   }
+
+//   @include for-size(desktop) {
+//     bottom: -259px;
+//     width: 100%;
+//   }
+// }
+.collage {
+  display: block;
+  width: 100%;
+  height: auto;
+
+  margin-bottom: 80px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 121px;
   }
 
   @include for-size(desktop) {
-    bottom: -259px;
-    width: 100%;
+    max-width: 1280px;
+    margin-bottom: 123px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
