--- a/src/sass/hero/_hero-partial.scss
+++ b/src/sass/hero/_hero-partial.scss
@@ -1,2 +1,4 @@
 @import './hero/_hero-container.scss';
 @import './hero/_hero-products.scss';
+@import './hero/_hero-ellipse.scss';
+@import './hero/_hero-logo.scss';
