Added desktop adaptive for Made section

--- a/src/sass/layouts/_section-made.scss
+++ b/src/sass/layouts/_section-made.scss
@@ -27,6 +27,8 @@
   @include for-size(desktop) {
     background-image: url(./../images/made/made-bg-1280.png);
     background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (-webkit-min-device-pixel-ratio: 2),
@@ -67,6 +69,10 @@
   @include for-size(tablet) {
     font-size: 26px;
   }
+
+  @include for-size(desktop) {
+    font-size: 30px;
+  }
 }
 
 .made-second-title {
@@ -82,12 +88,18 @@
     margin-bottom: 50px;
     font-size: 48px;
   }
+  @include for-size(desktop) {
+    margin-bottom: 55px;
+    font-size: 58px;
+  }
 }
 
 .made-photo {
-  margin-bottom: 46px;
-  margin-right: auto;
-  margin-left: auto;
+  @include for-size(mobile-only) {
+    margin-bottom: 46px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 .made-container {
@@ -114,11 +126,20 @@
 
 .made-main-text {
   margin-bottom: 30px;
+
+  @include for-size(desktop) {
+    font-size: 16px;
+    margin-bottom: 35px;
+  }
 }
 
 .made-text {
   color: $secondary-text-color;
   margin-bottom: 15px;
+
+  @include for-size(desktop) {
+    margin-bottom: 30px;
+  }
 }
 
 .made-button {
@@ -152,6 +173,10 @@
 
   @include for-size(tablet) {
     font-size: 16px;
+  }
+
+  @include for-size(desktop) {
+    margin-top: 15px;
   }
 }
 
