--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './base';
+@import './container';
 @import './color';
 @import './header';
 @import './hero';
