--- a/src/sass/layouts/_section-composition.scss
+++ b/src/sass/layouts/_section-composition.scss
@@ -3,14 +3,14 @@
 }
 
 .composition {
-    margin-bottom: 80px;
     background-color: $section-background;
-    @include for-size(tablet) {
+    /* margin-bottom: 80px; */
+    /* @include for-size(tablet) {
         margin-bottom: 121px;
     }
     @include for-size(desktop) {
         margin-bottom: 123px;
-    }
+    } */
 }
 
 .composition-cards {
@@ -103,6 +103,6 @@
 }
 
 .gallery-image {
-    display: inline-block;
+    display: block;
     margin: 0;
 }
