добавил visually-hidden

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -32,3 +32,14 @@ h6 {
 .link {
   text-decoration: none;
 }
+
+.visually-hidden {
+ position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0)
+}
