--- a/src/partials/shops.html
+++ b/src/partials/shops.html
@@ -1,5 +1,5 @@
 <section class="shops">
-  <div class="container">
+  <div class="container shops-container">
     <ul class="shops-list">
       <li class="shops-item">
         <h2 class="shops-title">CAFE</h2>
