--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -1,6 +1,7 @@
 .slider {
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 170px;
   text-align: center;
   line-height: 1.86;
   color: #000000;
