--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -1,16 +1,35 @@
 .shops {
-  padding-bottom: 113px;
+  position: relative;
+  height: 1502px;
   background-color: $footer-bg;
-  // background-image: url("./images/footer-bg.png");
-  // background-size: cover;
-  // background-repeat: no-repeat;
+  background-image: url('../images/footer-bg.png');
+  background-size: contain;
+  background-repeat: no-repeat;
   // background-position: center;
-  @media screen and (min-width: 768px) {
-    padding-bottom: 158px;
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (-webkit-min-device-pixel-ratio: 2),
+    screen and (-o-min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .shops {
+      background-image: url(../images/footer-bg@x2.png);
+    }
+    @media screen and (min-width: 768px) {
+      padding-bottom: 158px;
+      height: 755px;
+    }
+    // @media screen and (min-width: 1200px) {
+    //   padding-bottom: 165px;
+    // }
   }
-  @media screen and (min-width: 1200px) {
-    padding-bottom: 165px;
-  }
+}
+
+.shops-container {
+  position: absolute;
+  top: -84px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .shops-list {
@@ -41,6 +60,11 @@
   &:not(:last-child) {
     margin-bottom: 20px;
   }
+  @media screen and (min-width: 480px) {
+    width: 220px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   @media screen and (min-width: 768px) {
     width: calc(100% - 40px) / 3;
     padding: 50px 31px;
@@ -50,7 +74,10 @@
     }
   }
   @media screen and (min-width: 1200px) {
+    width: 100%;
     padding: 50px 44px 60px;
+    margin-left: 0;
+    margin-right: 0;
     &:not(:last-child) {
       margin-right: 30px;
     }
