ubiraet verhnii margin sekcii, tak kak u predposledneii sekcii est' margin bottom

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -47,6 +47,9 @@
   display: flex;
   justify-content: flex-end;
   margin-bottom: 46px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .social-item:not(:last-child) {
@@ -64,6 +67,7 @@
   &:hover,
   &:focus {
     background-color: $accent-color;
+    outline: none;
   }
 }
 
@@ -84,6 +88,7 @@
 
 .phone p {
   font-family: $main-font;
+  color: $primary-text-color;
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
@@ -95,6 +100,7 @@
   }
 
   @media screen and (min-width: 1200px) {
+    letter-spacing: 0.02em;
     font-size: 16px;
   }
 }
@@ -117,6 +123,10 @@
   @media screen and (min-width: 1200px) {
     font-size: 16px;
   }
+  &:hover,
+  &:focus {
+    outline-color: $accent-color;
+  }
 }
 
 .line {
@@ -127,6 +137,12 @@
 
 .finish-text {
   width: 150px;
+  color: $secondary-text-color;
+  font-family: $main-font;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.5;
   padding-top: 22px;
   padding-bottom: 25px;
   margin-bottom: 0;
@@ -137,18 +153,20 @@
     width: 100%;
     padding-top: 29px;
     padding-bottom: 18px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
   }
   @media screen and (min-width: 1200px) {
     width: 100%;
     padding-top: 9px;
     padding-bottom: 10px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
   }
 }
 
 .flexbox {
-  padding-top: 113px;
   @media screen and (min-width: 768px) {
-    padding-top: 165px;
     display: flex;
     justify-content: space-between;
   }
