--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -9,24 +9,39 @@
                             <use href="././images/icons/sprite.svg#logo-icon"></use>                                         
                         </svg> 
                     </a>                
-                    <div class="desktop-menu">
-                        <ul class="site-nav">
-                            <li class="nav-item"><a href="index.html" class="nav-link current">Home</a></li>
-                            <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
-                            <li class="nav-item"><a href="#recipy" class="nav-link">How it’s made?</a></li>
-                            <li class="nav-item"><a href="#products" class="nav-link">Our products</a></li>
-                            <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> 
-                         </ul>
-                         <buttonc class="btn2 sell-btn">Buy now</button>
+                    <ul class="site-nav">
+                        <li class="nav-item"><a href="index.html" class="nav-link current">Home</a></li>
+                        <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
+                        <li class="nav-item"><a href="#recipy" class="nav-link">How it’s made?</a></li>
+                        <li class="nav-item"><a href="#products" class="nav-link">Our products</a></li>
+                        <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> 
+                    </ul>
+                    <div class="btn-container">
+                        <button type="button" class="menu-btn open-btn" data-menu-open>
+                            <svg class="open-icon">
+                                <use href="././images/icons/sprite.svg#open-icon"></use>
+                            </svg>
+                        </button>
+                        <button type="button" class="btn2 nb-buy-btn">
+                            Buy now
+                            <svg class="right-icon">
+                                <use href="././images/icons/sprite.svg#right-icon"></use>
+                            </svg>
+                        </button>
                     </div>
-                    <button type="button" class="menu-btn">
-                        <svg>
-                            <use href="././images/icons/sprite.svg#burger-icon" class="open-icon"></use>
-                            <use href="././images/icons/sprite.svg#cross-icon" class="cross-icon"></use>  
-                        </svg>
-                    </button>
-                    <div class="mobile-menu" id="menu-container" data-menu>
-                        <button class="btn2">Buy now</button>
+                    
+                    <div class="mobile-menu" data-menu>
+                        <button type="button" class="menu-btn close-btn" data-menu-close>
+                            <svg class="cross-icon">
+                                <use href="././images/icons/sprite.svg#close-icon"></use>
+                            </svg>
+                        </button>
+                        <button type="button" class="btn2 buy-btn">
+                            Buy now
+                            <svg class="right-icon">
+                                <use href="././images/icons/sprite.svg#right-icon"></use>
+                            </svg>
+                        </button>
                         <ul class="mobile-site-nav">
                             <li class="mobile-nav-item"><a href="index.html" class="current nav-link">Home</a></li>
                             <li class="mobile-nav-item"><a href="#about" class="nav-link">About us</a></li>
@@ -69,3 +84,4 @@
             </div>
 
 </section>
+<script src="../menu.js"></script>
