--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,9 +1,50 @@
 .head-container {
     position: relative;
+
+    background-color: $accent-color;
+    @media screen  and (min-width:768px){
+        padding-top: 37px;
+    }
+}
+
+.btn-container {
+    display: flex;
+}
+.nb-buy-btn {
+    display: none;
+
+    @media screen  and (min-width:768px){
+        display: block;
+                
+        padding-right: 37.23px;
+        padding-left: 37.23px;
+
+        margin-left: 30px;
+    
+        width: 160px;
+        height: 44px;
+    
+        border: transparent;
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    
+        font-family: DM Sans;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 21px;
+
+        & .right-icon{
+            margin-left: 12px;
+        }
+    }
+    @media screen  and (min-width:1200px){
+        margin-right: 100px;
+    }
 }
 .nav {
-   
-
     padding-top: 6px;
     margin-left: auto;
     margin-right: auto;
@@ -11,6 +52,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    height: 56px;
+
+    @media screen  and (min-width:768px){
+        padding-right: 19px;
+        padding-left: 19px;
+    }
+
+    
 }
 
 .logo_icon {
@@ -23,70 +73,118 @@
     background-color: transparent;
     border: none;
 
-    display: inline-flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 
+    @media screen  and (min-width:1200px){
+        display: none;
+    }
+}
+
+.close-btn {
+    position: absolute;
+    top: 23px;
+    right: 28px;
+
+    @media screen  and (min-width:768px){
+        right: 14px;
+    }
+
+    
 }
 .open-icon {
-    fill: #E17992;
     width: 20px;
-    height: 14px;
+    height: 12px;
 }
+
 .cross-icon {
-    display: none;
-    width: 16px;
-    height: 16px;    
+    fill: $text-color-hero;
+    width: 14px;
+    height: 14px;    
 }
 
 .mobile-menu {
-    /*opacity: 0;
-    
-  
-    transform: translateX(100%);
-    /*transition:  ;*/
+     
     position: absolute;
     z-index: 999;
     top: 0;
     right: 0;
 
-    padding: 23px 20px 185px 21px;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+
+    padding-bottom: 185px;
 
     width: 250px;
     height: 502px;
 
     background-color: #E17992;
 
-    opacity: 0;
-    transform: translateX(100%);
-    
-
     &.is-open {
         opacity: 1;
         transform: translateX(0%);
-        
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);               
+    }     
+    
+    @media screen  and (min-width:768px){
+        width: 254px;
+        height: 1020px;
+
+    }
+    @media screen  and (min-width:1200px){
+        display: none;
     }
 
-    @media screen and (max-width: 767px) {
-        
-    }    
 }
-.btn2.sell-btn {
+
+.buy-btn {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
+    margin-top: 60px;
+    padding-right: 48.64px;
+    padding-left: 48.64px;
+
+
+
     width: 209px;
-    margin-bottom: 32px;
+    height: 44px;
+
+    border: transparent;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    font-family: DM Sans;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 21px;   
+}
+.right-icon {
+    width: 5.26px;
+    height: 9px;
+
+       
+    margin-left: 15.77px;
 }
 
 .mobile-nav-item {
-    margin-bottom: 23px;
+    padding-top: 11px;
+    padding-bottom: 13px;
+    padding-left: 21px;    
+
+    border: 1px solid #E18298;
 }
 .mobile-site-nav {
-    margin-top:32px;
-    margin-bottom: -23px;
-
-  
-      
+    margin-top: 19px;      
 }
-.nav-link {
+.nav-link {     
     font-family: DM Sans;
     font-weight: 700;
     font-size: 14px;
@@ -94,97 +192,28 @@
 
     
     color: $text-color-hero;
-
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current,
 .nav-link:hover,
 .nav-limk:focus {
     color: $title-text-color;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/*
-.menu {
+
+.site-nav {
     display: none;
 
-
-
-    
-    &.is-open {
-        display: block;
-    }
-    @media screen and (max-width:$pre-tablet) {  
-        position: absolute;
-        z-index: 999;
-        top:100%;
-        left:0;
-
-        padding-top: 60px;
-        padding-bottom: 60px;
-    
-        width: 100%;
-        
-        text-align: center;
-
-        background-color: $first-color;
-    
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-
-    }
-    @media screen and (min-width:$tablet) {
-        position: static;
+    @media screen  and (min-width:1200px){
         display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        width: 100%;
-        height: 80px;
-    }
-}
-.menu-button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-
-    margin-left: auto;
-
-    width: 40px;
-    height: 40px;
-
-
-    background-color: transparent;
-    border: none;
-
-    &_icon {
-        width: 24px;
-        height: 16px;
-    }
-
-    & .cross-icon {
-        display: none;
-    }
-    &.is-open .menu-icon {
-        display: none;
-    }
-    &.is-open .cross-icon {
-        display: block;
-    }
-    &.is-open  .menu-button_icon {
-        width: 18.67px;
-        height: 18.67px;
-    }
-  
-    @media screen and (min-width:$tablet) {
-        display: none;
     }
 }
 
-.menu-button:focus .menu-button_icon,
-.menu-button:hover .menu-button_icon {
-    fill: $accent-color;
-}
-*/
-.desktop-menu {
-    display: none;
+.nav-item:not(:last-child) {
+    margin-right: 30px;
+
+    @media screen  and (min-width:1210px){
+        margin-right: 35px;
+    }
 }
