усуває співпадіння стилів кнопок

--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -22,7 +22,7 @@
                                 <use href="././images/icons/sprite.svg#open-icon"></use>
                             </svg>
                         </button>
-                        <button type="button" class="btn2 nb-buy-btn">
+                        <button type="button" class="btn2 buy-btn buy-btn--nmob">
                             Buy now
                             <svg class="right-icon">
                                 <use href="././images/icons/sprite.svg#right-icon"></use>
@@ -36,7 +36,7 @@
                                 <use href="././images/icons/sprite.svg#close-icon"></use>
                             </svg>
                         </button>
-                        <button type="button" class="btn2 buy-btn">
+                        <button type="button" class="btn2 buy-btn buy-btn--mob">
                             Buy now
                             <svg class="right-icon">
                                 <use href="././images/icons/sprite.svg#right-icon"></use>
