--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -10,40 +10,64 @@
 .btn-container {
     display: flex;
 }
-.nb-buy-btn {
-    display: none;
 
-    @media screen  and (min-width:768px){
-        display: block;
-                
-        padding-right: 37.23px;
-        padding-left: 37.23px;
+.buy-btn {
+    border: transparent;       
+    
+    font-family: DM Sans;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.3125;
 
-        margin-left: 30px;
+    &--nmob {
+        display: none;
+
+        @media screen  and (min-width:768px){
+            display: flex;
+                    
+            padding-right: 37.23px;
+            padding-left: 37.23px;
     
-        width: 160px;
-        height: 44px;
-    
-        border: transparent;
+            margin-left: 30px;
         
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
+            width: 160px;
+            height: 44px;
+        
+           
     
-        font-family: DM Sans;
-        font-weight: bold;
-        font-size: 16px;
-        line-height: 21px;
-
-        & .right-icon{
-            margin-left: 12px;
+            & .right-icon{
+                margin-left: 12px;
+            }
+        }
+        @media screen  and (min-width:1200px){
+            margin-right: 100px;
         }
     }
-    @media screen  and (min-width:1200px){
-        margin-right: 100px;
+
+    &--mob{
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+    
+        margin-top: 60px;        
+
+        padding-right: 48.64px;
+        padding-left: 48.64px;    
+    
+        width: 209px;
+        height: 44px; 
+        
+        & .right-icon {              
+            margin-left: 15.77px;
+        }
     }
+
 }
+.right-icon {
+    width: 5.26px;
+    height: 9px;
+}
+
 .nav {
     padding-top: 6px;
     margin-left: auto;
@@ -140,39 +164,8 @@
 
 }
 
-.buy-btn {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-
-    margin-top: 60px;
-    padding-right: 48.64px;
-    padding-left: 48.64px;
 
 
-
-    width: 209px;
-    height: 44px;
-
-    border: transparent;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
-    font-family: DM Sans;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 21px;   
-}
-.right-icon {
-    width: 5.26px;
-    height: 9px;
-
-       
-    margin-left: 15.77px;
-}
 
 .mobile-nav-item {
     padding-top: 11px;
@@ -187,8 +180,7 @@
 .nav-link {     
     font-family: DM Sans;
     font-weight: 700;
-    font-size: 14px;
-    line-height: 18px;
+    line-height: 1.2857;
 
     
     color: $text-color-hero;
