Стилизирована кнопка, добавлен якорь

--- a/src/partials/recipe.html
+++ b/src/partials/recipe.html
@@ -1,9 +1,24 @@
 <section class="recipe">
   <div class="container">
         <p class="recipe_under-h">tradition and love</p>
-        <h1 class="recipe_title">how it’s made?</h1>
+        <h2 class="recipe_title" id="recipe">how it’s made?</h2>
     <div class="recipe_card">
-        <img class="recipe_cow" src="./images/bitmap/how-its-made/cow-milk/mob@1x.png" alt="cow" 
+<img class="recipe_cow" src="./images/bitmap/how-its-made/cow-milk/mob@1x.png" 
+srcset="./images/bitmap/how-its-made/cow-milk/mob@2x.png 2x" alt="cow">
+      <!-- <picture>
+        <sourse
+        srcset="./images/bitmap/how-its-made/cow-milk/mob@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/mob@2x.png 2x"
+        media="(min-width:320px)">
+        <source
+        srcset="./images/bitmap/how-its-made/cow-milk/tab@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/tab@2x.png 2x"
+        media="(min-width:740px)">
+        <source
+        srcset="./images/bitmap/how-its-made/cow-milk/desk@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/desk@2x.png 2x"
+         media="(min-width:1280px)">
+        <img class="recipe_cow" src="./images/bitmap/how-its-made/cow-milk/mob@1x.png" alt="cow">
+      </picture> -->
+
+        <!-- <img class="recipe_cow" src="./images/bitmap/how-its-made/cow-milk/mob@1x.png" alt="cow" 
              srcset="
     ./images/bitmap/how-its-made/cow-milk/mob@1x.png 280w,
     ./images/bitmap/how-its-made/cow-milk/mob@2x.png 560w,
@@ -11,7 +26,7 @@
     ./images/bitmap/how-its-made/cow-milk/tab@2x.png 680w,
     ./images/bitmap/how-its-made/cow-milk/desk@1x.png 516w,
     ./images/bitmap/how-its-made/cow-milk/desk@2x.png 1032w"
-          sizes="(min-width: 320px) 280px, (min-width: 740px) 340px, (min-width: 1280px) 516 px 100vw">
+          sizes="(min-width: 320px) 280px, (min-width: 740px) 340px, (min-width: 1280px) 516 px 100vw"> -->
         <div class="recipe_all-text">
             <p class="recipe_bold-text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros.
             Maecenas eleifend erat at justo fringilla.</p>
@@ -23,11 +38,20 @@
             <a href="#" class="link recipe-button">
               <div class="recipe_button-all">
                 <p class="recipe_button-text">Read more</p>
-              </div>
+                <span class="recipe_arrow">></span>
+                     </div>
             </a>
         </div>
         
-    </div>    
-    <img class="recipe_splash" src="./images/bitmap/how-its-made/milk-splash/mob-bcg@1x.png" alt="cow" srcset="./images/bitmap/how-its-made/milk-splash/mob-bcg@1x.png 1x, ./images/bitmap/how-its-made/milk-splash/mob-bcg@2x.png 2x">
+    </div>  
+    <picture>
+        <sourse
+        srcset="./images/bitmap/how-its-made/milk-splash/mob-bcg@1x.png 1x, ./images/bitmap/how-its-mademilk-splash/mob-bcg@2x.png 2x"
+        media="(min-width:320px)">  
+        <sourse
+          srcset="./images/bitmap/how-its-made/milk-splash/desk-bcg@1x.png 1x, ./images/bitmap/how-its-mademilk-splash/desk-bcg@2x.png 2x"
+          media="(min-width:1280px)">
+    <img class="recipe_splash" src="./images/bitmap/how-its-made/milk-splash/mob-bcg@1x.png" alt="cow">
+  </picture>
   </div> 
 </section>
