--- a/src/sass/layouts/_recipe.scss
+++ b/src/sass/layouts/_recipe.scss
@@ -56,8 +56,7 @@
   }
 }
 .recipe_all-text {
-  margin-bottom: 17px;
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $tablet) {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -101,8 +100,9 @@
   display: inline-block;
   padding-left: 37px;
   padding-right: 37px;
-  padding-top: 19px;
-  padding-bottom: 17px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  margin-top: 17px;
   border-radius: 20px;
   text-decoration: none;
 
@@ -120,20 +120,29 @@
     background-color: $color-accent-button-2;
   }
   @media screen and (min-width: $tablet) {
+    font-size: 16px;
     margin-top: 62px;
+    margin-right: auto;
   }
   @media screen and (min-width: $desktop) {
     margin-right: auto;
     margin-top: 45px;
   }
 }
+.recipe_button-all {
+  display: flex;
+}
+.recipe_arrow {
+  margin-left: 10px;
+}
+
 .recipe_splash {
   position: absolute;
   top: 766px;
   left: 0;
   right: 0;
   width: 100%;
-  @media screen and (min-width: $tablet) and (max-width: calc($desktop - 1px)) {
+  @media screen and (min-width: $tablet) and (max-width: 1279px) {
     display: none;
   }
   @media screen and (min-width: $desktop) {
