Позиціонування свг в блоках з кількістю кафе

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -11,7 +11,6 @@
   background-image: url(../images/hero/mobile/ice-cream.png);
   background-repeat: no-repeat;
   background-position: right bottom;
-
   @media screen and (min-width: 320px) {
     width: 320px;
   }
@@ -201,6 +200,7 @@
   @media screen and (min-width: 1200px) {
     width: 26px;
     height: 26px;
+    margin-top: 20px;
     background-image: url(../images/hero/desktop/arrow-right.jpg);
   }
 }
@@ -211,11 +211,13 @@
   font-style: normal;
   font-weight: 400;
   font-size: 8px;
+  line-height: 1.5;
 
   color: #ffffff;
 
   @media screen and (min-width: 1200px) {
     font-size: 14px;
+    line-height: 1.4;
   }
 }
 .hero__text.cafe {
@@ -288,6 +290,7 @@
   width: 16px;
   height: 16px;
   border-radius: 20px;
+  z-index: -1;
 
   background-image: url(../images/svg/circle.svg);
   background-repeat: no-repeat;
@@ -295,7 +298,7 @@
 
   @media screen and (min-width: 1200px) {
     left: 15px;
-    top: 24px;
+    top: 22px;
     width: 30px;
     height: 30px;
   }
@@ -308,6 +311,7 @@
   width: 16px;
   height: 16px;
   border-radius: 20px;
+  z-index: -1;
 
   background-image: url(../images/svg/circle.svg);
   background-repeat: no-repeat;
