--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,12 +20,18 @@
         </svg>
       </button>
       <div class="header-menu" data-menu>
-        <button class="btn-header btn">
+        <button class="btn-header btn" data-modal-open>
           Buy now
           <svg class="arrow-svg" aria-label="Переход на мгновенную покупку">
             <use href="../src/images/icons/sprite.svg#tip"></use>
           </svg>
         </button>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button class="btn_close" data-modal-close>X</button>
+            <p class="message">This is modal window</p>
+          </div>
+        </div>
         <div class="header-menu-tablet">
           <ul class="header-navigation">
             <li class="header-navigation-list">
