--- a/src/sass/config/_color-scheme.scss
+++ b/src/sass/config/_color-scheme.scss
@@ -39,3 +39,6 @@ $secondary-overlay-decor-color: #c2e297;
 $alternate-overlay-decor-color: #ffb8ca;
 
 $color-icon: #fea5bb;
+
+$trans-duration: 250ms;
+$trans-function: cubic-bezier(0.4, 0, 0.2, 1);
