обновил список браузеров. Работаю над слайдером
package-lock.json
package.json

Изменения в этих файлах

--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -1,4 +1,38 @@
-.slider-title {
+.slider-section {
+  padding-top: 80px;
+  background-color: rgb(220, 209, 98);
+}
+
+.slider-list {
+  width: 100%;
+}
+
+.slider-list-item {
+  box-sizing: border-box;
+  &::before {
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    content: '';
+    height: 120px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    margin-bottom: 29px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+
+.girl-1::before {
+  background-image: url(../images/testimonials1.png);
+}
+
+.girl-1::after {
+  background-image: url(../images/svg/dot.svg);
+}
+
+.slider-list-text {
   color: tomato;
   font-style: 34px;
 }
