adding lines and repositioning arrows

--- a/src/partials/section-slider.html
+++ b/src/partials/section-slider.html
@@ -22,10 +22,12 @@
         />
       </picture>
 
-      <p class="review-text underline">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
-        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
-        in nibh vel risus.
+      <p class="review-text">
+        <span class="review-text-underlined">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </span>
       </p>
 
       <p class="reviewer-name">Emily, Los Angeles</p>
@@ -59,10 +61,12 @@
       </picture>
 
       <p class="review-text">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi inventore
-        veniam enim dicta, eligendi impedit quas at voluptates ipsa a aut
-        consectetur iure alias earum veritatis neque perspiciatis expedita?
-        Commodi!
+        <span class="review-text-underlined">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi
+          inventore veniam enim dicta, eligendi impedit quas at voluptates ipsa
+          a aut consectetur iure alias earum veritatis neque perspiciatis
+          expedita? Commodi!
+        </span>
       </p>
 
       <p class="reviewer-name">Emily, Los Angeles</p>
@@ -94,8 +98,11 @@
       </picture>
 
       <p class="review-text">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-        illum cum minus fugit.
+        <span class="review-text-underlined">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+          veniam impedit tenetur voluptas nam repellendus debitis unde ad
+          temporibus laboriosam.
+        </span>
       </p>
 
       <p class="reviewer-name">Emily, Los Angeles</p>
