--- a/src/sass/layouts/_section-slider.scss
+++ b/src/sass/layouts/_section-slider.scss
@@ -1,7 +1,3 @@
-// @mixin background-image-spaced($width, $height, $margin-bottom, $image) {
-//   background-image: url('../images/slider/line.svg');
-// }
-
 .reviews {
   padding-top: 155px;
   padding-bottom: 170px;
@@ -33,37 +29,50 @@
 .review-text {
   position: relative;
   background-color: #fafafa;
-
-  // background-image: url(../images/slider/line.svg);
-  // @include background-image-spaced(50%, 1px, 6px, '../images/slider/line.svg');
-
-  background-position: center;
+  background-image: url(../images/slider/quotes.svg);
+  background-position: left 60px top 30px;
 
   text-align: center;
   padding: 40px 60px 20px;
   background-repeat: no-repeat;
-
-  text-decoration: underline 1px solid #e1e1e1;
-  text-underline-offset: 20%;
-  &::before {
-    content: '';
-    position: absolute;
-    background-image: url(../images/slider/quotes.svg);
-    top: 30px;
-    left: 30px;
-    width: 60px;
-    height: 60px;
-    background-repeat: no-repeat;
-    // background-size: contain;
-    // background-repeat: no-repeat;
+  @include for-size(tablet) {
+    background-position: left 40px top 30px;
+  }
+  @include for-size(desktop) {
+    background-position: left 50px top 32px;
   }
 }
 
-// .underline {
-//   background-image: url(../images/slider/line.svg);
-//   width: 70%;
-//   background-repeat: repeat-y;
-// }
+.review-text-underlined {
+  display: inline-block;
+  text-align: center;
+  background-image: repeating-linear-gradient(
+    transparent,
+    transparent 29px,
+    #e1e1e1 1px,
+    #e1e1e1 30px
+  );
+
+  background-size: 100%;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 2.55;
+  @include for-size(tablet) {
+    font-size: 14px;
+    line-height: 2.16;
+  }
+  @include for-size(desktop) {
+    background-image: repeating-linear-gradient(
+      transparent,
+      transparent 28px,
+      rgb(225, 225, 225) 1px,
+      rgb(225, 225, 225) 29px
+    );
+
+    font-size: 16px;
+    line-height: 1.86;
+  }
+}
 
 .reviewer-name {
   text-align: center;
@@ -77,32 +86,3 @@
     font-size: x-large;
   }
 }
-
-// .arrow-next {
-//   position: absolute;
-//   bottom: 0;
-//   right: 15%;
-//   background-color: teal;
-//   outline: none;
-//   border: 0;
-//   width: 30px;
-//   height: 30px;
-// }
-
-// .arrow-back {
-//   position: absolute;
-//   bottom: 0;
-//   left: 15%;
-//   background-color: teal;
-//   outline: none;
-//   border: 0;
-//   width: 30px;
-//   height: 30px;
-//   z-index: 2;
-// }
-
-// .arrow-icon {
-//   width: 30px;
-//   height: 30px;
-//   fill: black;
-// }
