--- a/src/sass/components/_outlets.scss
+++ b/src/sass/components/_outlets.scss
@@ -10,6 +10,13 @@
   left: 50px;
   right: 50px;
   top: -84px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -10px;
+    margin-top: -10px;
+  }
 }
 .outlets-item {
   width: 100%;
@@ -19,6 +26,13 @@
   background: $third-text-color;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 6 * 10px) / 3);
+    margin: 10px;
+    height: 544px;
+    padding: 50px 31px;
+  }
 }
 .subtitle {
   width: 80px;
@@ -26,12 +40,20 @@
   font-family: DM Sans;
   font-weight: 500;
   font-size: 12px;
-  align-items: center;
+  line-height: 1.86;
+  text-align: center;
   letter-spacing: 0.04em;
 
   color: $third-text-color;
   background: $product-contant-container-2;
   border-radius: 4px;
+
+  @media screen and (min-width: 768px) {
+    width: 73px;
+    margin-bottom: 30px;
+    font-size: 16px;
+    border-radius: 6px;
+  }
 }
 .subtitle-food {
   width: 130px;
@@ -39,12 +61,20 @@
   font-family: DM Sans;
   font-weight: 500;
   font-size: 12px;
+  line-height: 1.86;
   text-align: center;
   letter-spacing: 0.04em;
 
   color: $third-text-color;
   background: $product-contant-container-3;
   border-radius: 4px;
+
+  @media screen and (min-width: 768px) {
+    width: 138px;
+    margin-bottom: 30px;
+    font-size: 16px;
+    border-radius: 6px;
+  }
 }
 .outlets-title {
   margin-bottom: 20px;
@@ -55,6 +85,12 @@
   letter-spacing: 0.04em;
 
   color: $first-text-color;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 14px;
+    font-size: 14px;
+    line-height: 1.83;
+  }
 }
 .outlets-text {
   padding-bottom: 25px;
@@ -66,6 +102,13 @@
   color: $second-text-color;
 
   border-bottom: 1px solid #e1e1e1;
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    font-size: 14px;
+    line-height: 1.66;
+  }
 }
 .timetable-title {
   font-family: DM Sans;
@@ -74,12 +117,13 @@
   line-height: 1.83;
 
   color: $first-text-color;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.86;
+  }
 }
 .outlets-time-item {
-  &:not(:first-child) {
-    padding-top: 10px;
-    padding-bottom: 25px;
-  }
   &:last-child {
     border-bottom: 1px solid #e1e1e1;
   }
@@ -91,6 +135,11 @@
   line-height: 1.83;
 
   color: $second-title-color;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.86;
+  }
 }
 .outlets-contacts {
   margin-top: 25px;
@@ -102,6 +151,9 @@
   line-height: 1.5;
   color: $second-text-color;
   text-decoration: none;
-}
 
-// border-bottom: 1px solid #E1E1E1;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.83;
+  }
+}
