--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -11,18 +11,21 @@
                     </li>
                     <li class="locations__box">
                         <ul>
-                            <li class="locations__operation time">
+                            <li class="locations__operation-time">
                                 <p class="locations__working-days">Monday - Friday</p>
                                 <p class="locations__working-hours">06:00 AM - 10:00 PM</p>
                             </li>
-                            <li class="locations__operation time">
+                            <li class="locations__operation-time">
                                 <p class="locations__working-days">Saturday - Sunday</p>
                                 <p class="locations__working-hours">08:00 AM - 16:00 PM</p>
                             </li>
                         </ul>
                     </li>
                     <li class="locations__box">
-                        <p class="locations__contacts">+61(0) 383 766 284 noreply@envato.com</p>
+                        <ul>
+                            <li class="locations__mail"><a class="locations__contacts" href="#">+61(0) 383 766 284</a></li>
+                            <li class="locations__mail"><a class="locations__contacts" href="#">noreply@envato.com</a></li>
+                        </ul>
                     </li>
                 </ul>
             </li>
@@ -35,7 +38,7 @@
                     </li>
                     <li class="locations__box">
                         <ul>
-                            <li class="locations__operation time">
+                            <li class="locations__operation-time">
                                 <p class="locations__working-days">Monday - Friday</p>
                                 <p class="locations__working-hours">06:00 AM - 10:00 PM</p>
                             </li>
@@ -46,7 +49,10 @@
                         </ul>
                     </li>
                     <li class="locations__box">
-                        <p class="locations__contacts">+61(0) 383 766 284 noreply@envato.com</p>
+                                                <ul>
+                                                    <li class="locations__mail"><a class="locations__contacts" href="#">+61(0) 383 766 284</a></li>
+                                                    <li class="locations__mail"><a class="locations__contacts" href="#">noreply@envato.com</a></li>
+                                                </ul>
                     </li>
                 </ul>
             </li>
@@ -59,7 +65,7 @@
                     </li>
                     <li class="locations__box">
                         <ul>
-                            <li class="locations__operation time">
+                            <li class="locations__operation-time">
                                 <p class="locations__working-days">Monday - Friday</p>
                                 <p class="locations__working-hours">06:00 AM - 10:00 PM</p>
                             </li>
@@ -70,12 +76,17 @@
                         </ul>
                     </li>
                     <li class="locations__box">
-                        <p class="locations__contacts">+61(0) 383 766 284 noreply@envato.com</p>
+                                                <ul>
+                                                    <li class="locations__mail"><a class="locations__contacts" href="#">+61(0) 383 766 284</a></li>
+                                                    <li class="locations__mail"><a class="locations__contacts" href="#">noreply@envato.com</a></li>
+                                                </ul>
                     </li>
                 </ul>
             </li>
         </ul>
-        <a class="locations__btn-locations"  href="#">Our Locations</a>
-        <a class="locations__btn-franchise"  href="#">Franchise</a>
+        <div class="locations__buttons">
+            <a class="locations__btn-locations"  href="#">Our Locations</a>
+            <a class="locations__btn-franchise"  href="#">Franchise</a>
+        </div>
     </div>
 </section>
