--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -2,7 +2,7 @@
   padding-left: 20px;
   padding-right: 20px;
   @media screen and (min-width: 320px) {
-    width: 320px;
+    min-width: 320px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
