--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -6,15 +6,17 @@ $colors: (
   'btnActiv': #c7133e,
   'textLight': #ffffff,
   'titleLight': #ffa5ba,
-  'productFirstBgrd': #ffb8ca,
-  'productSecondBgrd': #f0d1a5,
+  'productFirstBgrd': #f0d1a5,
+  'productSecondBgrd': #ffb8ca,
   'productThirdBgrd': #c2e297,
   'sliderBgrd': #fafafa,
   'sliderActiv': #d31342,
   'sliderBorder': #e1e1e1,
   'socials': #fea5bb,
   'lightBgrd': #fff5f6,
+  'secondaryBtnActive': #ecebeb,
 );
+
 @function getColor($key) {
   @return map-get($colors, $key);
 }
