--- a/src/sass/_comments.scss
+++ b/src/sass/_comments.scss
@@ -3,6 +3,7 @@
  width: 100%;
  padding-top: 80px;
  padding-bottom: 86px;
+//  text-align: center;
  
   @media screen and(min-width: $tablet) and (max-width: 1199px) {
     max-width: 620px; 
@@ -22,12 +23,14 @@
 }
 
 .comment-text-container {
- width: 100%;
+//  width: 100%;
  position: relative;
  z-index: -2;
 
  margin-top: 29px;
  margin-bottom: 30px;
+//  margin-right: auto;
+//  margin-right: auto;
 
  background-color: $alternate-bg-color;
 
@@ -52,28 +55,38 @@
     letter-spacing: 0.04em;
     color: $black;
 
-@media screen and (max-width: $mobile) {
-    padding: 43px 66px 26px 57px;  
+@media screen and (max-width: 767px) {
+    padding: 41px 50px 20px 50px;  
     font-size: 12px;
    line-height: 2.58;
   }
 
 @media screen and (min-width: $tablet) and (max-width: 1199px)  {
-    padding: 47px 80px 34px 80px;
+    padding: 46px 36px 28px 40px;
     font-size: 14px;
     line-height: 2.14;
-    
+    // width: 544px;
   }
 
-
-   
- @media screen and (min-width: $desktop) {
-    padding: 47px 89px 39px 87px;
+ @media screen and (min-width:$desktop) {
+    padding: 47px 89px 29px 67px;
    
    font-size: 16px;
    line-height: 1.875;
 
   }  
+}
+// .comment-text-mobile {
+
+// }
+
+.comment-text-tablet {
+width: 544px;
+// height: 106px;
+}
+
+.comment-text-desktop {
+width: 813px;
 }
 
 .comment-dekor {
@@ -92,15 +105,89 @@
   background-size: contain;
 
     @media screen and (min-width: $tablet) and (max-width: 1199px){
-    top: 17%;
-    left: 7%;
+    top: 20%;
+    left: 5%;
   }
 
  @media screen and(min-width: $desktop) {
-  top: 32px;
-  left: 50px;
+  top: 22%;
+  // left: 50px;
   }  
 }
+
+// .comment-dekorline::after {
+//   content: '';
+//   display: block;
+  
+//   width: 180px;
+//   height: 1px;
+//   background-color:  $primary-decor-color;
+// @media screen and(min-width: $tablet) {
+//   width: 524px;
+// }
+// }
+
+// .comment-text-mobile {
+//     @media screen and (min-width: $tablet) {
+//       display: none;
+//     }
+// }
+
+// // .comment-text-tablet {
+// //     @media screen and (min-width: $tablet) and (max-width: 1199px){
+// //       display: none;
+// //     }
+// // }
+
+// .comment-text-tablet {
+//   @media screen and (min-width: $desktop) and (max-width: 319px){
+//     display: none; 
+//   }
+// }
+
+// .comment-text-desktop {
+//   @media screen  and (max-width: 1199px) {
+//     display: none; 
+//   }
+// }
+
+ @media screen  and (max-width: 767px) {
+   .comment-text-desktop,
+   .comment-text-tablet {
+     display: none; 
+   }
+ }
+
+ @media screen  and (min-width: $desktop) {
+   .comment-text-mobile,
+   .comment-text-tablet {
+     display: none; 
+   }
+ }
+
+@media screen  and (min-width: $tablet) and (max-width: 1199px) {
+  .comment-text-mobile,
+   .comment-text-desktop {
+     display: none; 
+}
+}
+
+
+ 
+.comment-dekorline {
+  display: block;
+  border-bottom: 1px solid $primary-decor-color;
+  max-width: 180px;
+  
+@media screen  and (min-width: $tablet) and (max-width: 1199px) {
+  max-width: 524px;
+}
+@media screen  and (min-width: $desktop) {
+  max-width: 813px;
+}
+}
+
+
 
 .comment-dots {
     display: flex;
@@ -152,7 +239,9 @@
    font-size: 14px;  
    
     @media screen and (min-width: $tablet) and (max-width: 1199px){
-    font-size: 16px;
+    margin-top: 14px;
+    margin-bottom: 35px;
+      font-size: 16px;
      line-height: 1.875;
   }
    @media screen and(min-width: $desktop) {
