--- a/src/partials/comments.html
+++ b/src/partials/comments.html
@@ -1,11 +1,13 @@
 <section class="comments">
   <div class="container comments-container">
-    <h2 class="visually-hidden"></h2>
+    <h2 class="visually-hidden">Slider</h2>
     <!-- Ваш код здесь -->
     <div class="comments-slider">
+      <img class="team-img" src="../images/comments/testimonials-1.jpg" width="85" height="85" alt="Foto Emily" />
       <!-- <picture class="comments-foto">
-        <source srcset="../images/comments/testimonials-1.jpg, 
-                      ../images/comments/testimonials-1@2x.jpg"  />
+
+        <source srcset="../images/comments/testimonials-1.jpg 1x, 
+                      ../images/comments/testimonials-1@2x.jpg 2x"  />
         <img class="team-img" src="../images/comments/testimonials-1.jpg"
          width="85" height="85" alt="Foto Emily"/>
       </picture> -->
@@ -13,9 +15,30 @@
       <div class="comment-text-container">
       
     <div class="comment-text">
-        <span class="comment-dekor"></span>
-             Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-        congue. Lorem ipsum primis in nibh vel risus.
+      
+        <div class="comment-text-mobile">
+            <span class="comment-dekorline">Nullam viverra</span>
+            <span class="comment-dekorline">consectetuer. Quisque</span>
+            <span class="comment-dekorline">cursus et, porttitor risus.</span>
+            <span class="comment-dekorline">Aliquam sem. In hendrerit</span>
+            <span class="comment-dekorline">nulla quam nunc,</span>
+            <span class="comment-dekorline">accumsan congue. Lorem</span>
+            <span class="comment-dekorline">ipsum primis in nibh vel</span>
+            <span class="comment-dekorline">risus.</span>
+        </div> 
+
+        <div class="comment-text-tablet">
+          <span class="comment-dekorline">Nullam viverra consectetuer. Quisque cursus et, porttitor risus.</span>
+          <span class="comment-dekorline"> Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.</span>
+          <span class="comment-dekorline">Lorem ipsum primis in nibh vel risus.</span>
+        </div>
+
+        <div class="comment-text-desktop">
+          <span class="comment-dekorline">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit </span>
+          <span class="comment-dekorline">nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</span>
+        </div>
+
+        <span class="comment-dekor"></span>       
      </div>
 
     </div> 
@@ -27,13 +50,13 @@
       </div>
       <!-- your content -->
       <div class="comment-name">Emily, Los Angeles</div>
-      <div class="slider-dots">
-        <!-- <svg class="comment-icon-home">
-          <use href="../images/svg/sprite.svg#icon-home"></use>
-        </svg> -->
-        <div class="dot"></div>
-        <div class="dot"></div>
-      </div>
+        <div class="slider-dots">
+          <!-- <svg class="comment-icon-home">
+            <use href="../images/svg/sprite.svg#icon-home"></use>
+          </svg> -->
+          <div class="dot"></div>
+          <div class="dot"></div>
+       </div>
     </div>
   </div>
 </section>
