--- a/src/sass/hero/_hero-partial.scss
+++ b/src/sass/hero/_hero-partial.scss
@@ -2,3 +2,4 @@
 @import './hero/_hero-products.scss';
 @import './hero/_hero-ellipse.scss';
 @import './hero/_hero-logo.scss';
+@import './hero/_hero-locations.scss';
